# buyme_project

./: 4  Register_Page.py  base_page.py  data.json  four_page.py  home_screen.py  main.py  pyproject.toml  test.py  third_page.py
allure-report/export/: influxDbData.txt
